tests/fixtures/invalid/duplicate-key-table.stderr
TOML parse error at line 4, column 1
  |
4 | [fruit.type]
  | ^
Duplicate key `type` in table `fruit`

While parsing a Table Header
